maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:20: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:27: error: Unmatched closing brace '}' ignored here
}
^